fix spacing of main content

--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -8,7 +8,6 @@
     justify-content: center;
     background-color: #222;
     padding: 1.5em 0;
-    margin-top: 1.5em;
 }
 
 .container p {
